--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "kanban board web application made with AngularJS, NodeJS, ExpressJS and MongoDB",
   "main": "app.js",
   "dependencies": {
-    "angular": "*",
-    "angular-animate": "*",
-    "angular-aria": "*",
-    "angular-dragula": "*",
-    "angular-material": "*",
+    "angular": "^1.4.8",
+    "angular-animate": "^1.4.8",
+    "angular-aria": "^1.4.8",
+    "angular-dragula": "^1.1.6",
+    "angular-material": "^0.11.4",
     "angular-messages": "^1.4.8",
-    "body-parser": "*",
-    "express": "*",
+    "body-parser": "^1.14.1",
+    "express": "^4.13.3",
     "mongoose": "^4.2.10"
   },
   "devDependencies": {},
@@ -21,9 +21,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@bitbucket.org/juangm_iternox/kanban-board.git"
+    "url": "git+ssh://git@github.com/juangranadilla/TaskBan-web/"
   },
   "author": "Juan José Granadilla Manzano",
-  "license": "GPLv3",
+  "license": "GPL-3.0",
   "homepage": "https://github.com/juangranadilla/TaskBan-web/"
 }
