--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "angular-route": "^1.4.9",
     "body-parser": "^1.14.2",
     "express": "^4.13.3",
+    "jsonwebtoken": "^5.5.4",
     "mongoose": "^4.3.6",
     "morgan": "^1.6.1"
   },
