--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "angular-material": "^1.0.2",
     "angular-messages": "^1.4.9",
     "angular-route": "^1.4.9",
+    "bcryptjs": "^2.3.0",
     "body-parser": "^1.14.2",
     "express": "^4.13.3",
     "jsonwebtoken": "^5.5.4",
