--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "mongoose": "^4.3.6",
     "morgan": "^1.6.1"
   },
+  "engines": {
+    "node": "4.3.0",
+    "npm": "3.7.3"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
