Using angular material prompt dialogs

--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "description": "kanban board web application made with AngularJS, NodeJS, ExpressJS and MongoDB",
   "main": "app.js",
   "dependencies": {
-    "angular": "^1.4.9",
-    "angular-animate": "^1.4.9",
-    "angular-aria": "^1.4.9",
+    "angular": "^1.5.5",
+    "angular-animate": "^1.5.5",
+    "angular-aria": "^1.5.5",
     "angular-dragula": "^1.2.2",
-    "angular-material": "^1.0.6",
-    "angular-messages": "^1.4.9",
-    "angular-route": "^1.4.9",
+    "angular-material": "^1.0.8",
+    "angular-messages": "^1.5.5",
+    "angular-mocks": "^1.5.5",
+    "angular-route": "^1.5.5",
+    "angular-sanitize": "^1.5.5",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.14.2",
     "express": "^4.13.3",
     "jsonwebtoken": "^5.5.4",
-    "mongoose": "^4.3.6",
+    "mongoose": "^4.4.14",
     "morgan": "^1.6.1"
   },
   "engines": {
