--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "angular-animate": "^1.5.5",
     "angular-aria": "^1.5.5",
     "angular-dragula": "^1.2.2",
-    "angular-material": "^1.0.8",
+    "angular-material": "http://github.com/angular/bower-material/tarball/v1.1.0-rc4",
     "angular-messages": "^1.5.5",
     "angular-mocks": "^1.5.5",
     "angular-route": "^1.5.5",
