--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "angular-sanitize": "^1.5.5",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.14.2",
+    "email-validator": "^1.0.4",
     "express": "^4.13.3",
     "jsonwebtoken": "^5.5.4",
     "mongoose": "^4.4.14",
-    "morgan": "^1.6.1"
+    "morgan": "^1.6.1",
+    "nodemailer": "^2.5.0",
+    "rand-token": "^0.2.1"
   },
   "engines": {
     "node": "4.3.0",
